[package]
name = "context-switch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[target.'cfg(any(target_arch="x86", target_arch="x86"))'.dependencies]
raw_cpuid = "10.3.0"

[target.'cfg(target_arch="arm")'.dependencies]
libc = "0.2.126"
