[package]
name = "green-threads"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# [target.'cfg(any(target_arch="x86", target_arch="x86_64"))'.dependencies]
# raw-cpuid = "10.3"

[target.'cfg(unix)'.dependencies]
libc = "0.2.126"

[target.'cfg(windows)'.dependencies]
winapi = "0.2"
kernel32-sys = "0.2.2"
